--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gravityai-dev/nova",
-  "version": "1.0.9",
+  "version": "1.1.1",
   "description": "AWS Nova integration for Gravity workflow system",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -13,8 +13,8 @@
   },
   "dependencies": {
     "@aws-sdk/client-bedrock-runtime": "^3.0.0",
-    "@gravityai-dev/gravity-server": "0.2.99",
-    "@gravityai-dev/plugin-base": "1.0.10",
+    "@gravityai-dev/gravity-server": "file:../../../../gravity-server",
+    "@gravityai-dev/plugin-base": "file:../plugin-base",
     "@smithy/node-http-handler": "^3.0.0",
     "pino": "^8.0.0",
     "rxjs": "^7.0.0"
